--- a/FinalSMA/Client/Pages/MostrarVacante.razor
+++ b/FinalSMA/Client/Pages/MostrarVacante.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Bolsa de Trabajo San Miguel de Allende</PageTitle>
 
-<h1> Gracias npor subir tus datois para la Vacante</h1>
+<h1> Gracias por subir tus datos para la Vacante</h1>
 
 <h2> Nosotros nos comunicamos contigo a la brevedad</h2>
 
